--- a/RAG_ChromaDB_llama3_2.ipynb
+++ b/RAG_ChromaDB_llama3_2.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyMmnDecxoWr88m7FjGhCK5E"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -5845,10 +5844,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R-DDyxKXtU9v",
-        "outputId": "ac392de1-8d1b-40d3-f1c2-f52c82215dee",
-        "collapsed": true
+        "outputId": "ac392de1-8d1b-40d3-f1c2-f52c82215dee"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5881,7 +5879,7 @@
         "id": "OWsotr86xlzn",
         "outputId": "9648a64d-c14b-4a2f-e95f-82b4d6fa98b7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6115,7 +6113,7 @@
         "id": "oXwvBLWgOuwq",
         "outputId": "2ab3e9d0-a0e9-4ca6-e528-6ad4e9bbd178"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6164,10 +6162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3ahSJFnDU00C",
-        "outputId": "af1f99f0-86d3-40df-b7aa-96b4e17b62fc",
-        "collapsed": true
+        "outputId": "af1f99f0-86d3-40df-b7aa-96b4e17b62fc"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6297,7 +6294,7 @@
       "metadata": {
         "id": "hMHIfAXro7a-"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6345,7 +6342,7 @@
       "metadata": {
         "id": "RJxTd0m4tfeF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6409,7 +6406,7 @@
       "metadata": {
         "id": "W7xeigErpTQU"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6425,7 +6422,7 @@
         "id": "j3druXbSw_yc",
         "outputId": "fe1fb7c1-3370-4235-8655-9558d6d28842"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6476,7 +6473,7 @@
       "metadata": {
         "id": "j5ANxadvWmdp"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6637,7 +6634,7 @@
         "id": "kZfe8la2XLyy",
         "outputId": "59302d10-cac1-4cba-ef63-1dd07ac3d558"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6839,7 +6836,7 @@
       "metadata": {
         "id": "F2NyT8EIaR2U"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6853,7 +6850,7 @@
       "metadata": {
         "id": "q6aPY1H44GXU"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6916,7 +6913,7 @@
       "metadata": {
         "id": "g5FpBTye483X"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6939,7 +6936,7 @@
       "metadata": {
         "id": "tNPAVrZr7z4s"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7027,7 +7024,7 @@
         "id": "SuMHxtTH777U",
         "outputId": "e29a74dd-8b6b-452b-88f1-9fd44bad3bc4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7145,7 +7142,7 @@
       "metadata": {
         "id": "biWb5z6K6NW6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7189,7 +7186,7 @@
       "metadata": {
         "id": "CSopGAHR-7jJ"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7227,7 +7224,7 @@
       "metadata": {
         "id": "R4-HqmgO_pWW"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7256,7 +7253,7 @@
         "id": "fESZLQAI_yk0",
         "outputId": "50bc419a-15c5-4137-d4b4-e2e91a35e443"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7299,7 +7296,7 @@
         "id": "Gw4gxoKZ0ysi",
         "outputId": "448df226-4131-4276-8da2-9b6bf642d703"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7333,7 +7330,7 @@
         "id": "ctTVD3c9Xdqg",
         "outputId": "42a7ea7d-2d4e-424a-c658-fc6d0b9fe878"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7396,7 +7393,7 @@
         "id": "BsNCr0uPWDhk",
         "outputId": "898c9d57-07a1-4a23-aec1-30303026d985"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
